Improved avatar uploads

--- a/resources/angular-views/directive-partials/ui-avatar.html
+++ b/resources/angular-views/directive-partials/ui-avatar.html
@@ -1,8 +1,10 @@
 
-<div style="position: relative;">
+<!-- Main wrapper -->
+<div class="ui-avatar-container" ng-style="{width: containerWidth}">
 
-    <!-- Upload button -->
-    <button
+    <!-- Avatar container -->
+    <a
+        href="javascript:;"
         ngf-select="upload($file)"
         ngf-drop
         accept="image/*"
@@ -10,26 +12,26 @@
         ngf-capture="'camera'"
         ngf-min-height="100"
         ngf-max-size="2MB"
-        class="btn btn-default"
-        style="padding: 0;">
+        class="aspect-ratio aspect-square ui-avatar-button"
+        ng-style="{'background-image': 'url(' + avatarSrc + ')'}">
+        <div>
 
-        <span ng-switch="status">
-
-            <!-- Avatar -->
-            <img ng-switch-when="uploaded" src="{{ avatarSrc }}" style="width: 100%">
+            <!-- Loading animation -->
+            <div ng-show="status == 'uploading'" class="ui-avatar-placeholder uploading">
+                <i class="fa fa-spinner fa-spin"></i>
+            </div>
 
             <!-- Avatar placeholder -->
-            <i
-                ng-switch-when="none"
-                class="fa fa-user"
-                style="padding: 30px 40px; font-size: 5em;"></i>
+            <div ng-show="status == 'none'" class="ui-avatar-placeholder">
+                <i class="fa fa-user fa-2x"></i>
+            </div>
 
-            <!-- Uploading notifier -->
-            <i
-                ng-switch-when="uploading"
-                class="fa fa-spin fa-spinner"
-                style="padding: 30px 40px; font-size: 5em;"></i>
+            <!-- Avatar actions -->
+            <div class="ui-avatar-actions">
+                <i class="fa fa-camera fa-fw ui-avatar-icon"></i>
+                <span class="ui-avatar-text">Update Avatar</span>
+            </div>
 
-        </span>
-    </button>
+        </div>
+    </a>
 </div>
