--- a/resources/angular-views/directive-partials/ui-editable-fields/fields.html
+++ b/resources/angular-views/directive-partials/ui-editable-fields/fields.html
@@ -1,7 +1,7 @@
 
 <!-- Copyright Heddoko(TM) 2015, all rights reserved. -->
 
-<div class="panel panel-default ui-editable-fields">
+<div class="panel panel-default ui-editable-fields" ng-attr-id="{{ id }}">
     <div class="panel-heading">
         {{ heading }}
 
