--- a/resources/angular-views/profile/view.html
+++ b/resources/angular-views/profile/view.html
@@ -12,14 +12,17 @@
 
     <div class="row">
 
-        <!-- Breadcrumbs -->
-        <div class="col-sm-12 col-md-6">
-            <div data-ng-include="'partials/breadcrumbs.html'"></div>
-        </div>
-
         <!-- Actions -->
-        <div class="col-sm-12 col-md-6">
-            <div class="btn-group pull-right">
+        <div class="col-sm-12">
+            <div class="pull-right">
+
+                <!-- Create profile button -->
+                <button
+                    ng-click="global.browseTo.path('profile/create')"
+                    class="btn btn-default">
+
+                    <i class="fa fa-user-plus"></i>
+                </button>
 
                 <!-- Delete profile button -->
                 <button
@@ -30,7 +33,7 @@
                     title="Delete <b>{{ profile.firstName }}</b>'s profile"
                     class="btn btn-danger">
 
-                    Delete <b>{{ profile.firstName }}</b>'s profile
+                    <i class="fa fa-trash"></i>
                 </button>
 
                 <!-- Delete confirmation -->
@@ -54,15 +57,9 @@
                         </div>
                     </div>
                 </div>
-
-                <!-- Create profile button -->
-                <button
-                    ng-click="global.browseTo.path('profile/create')"
-                    class="btn btn-default">
-
-                    Add another athlete
-                </button>
             </div>
+            <br>
+            <br>
         </div>
     </div>
 
@@ -70,19 +67,21 @@
     	<div class="row">
 
             <!-- Avatar -->
-    		<div class="col-md-6 col-sm-12">
-                <div class="text-center" style="margin: 5% 20%; width: 60%;">
+    		<div class="col-sm-12 col-md-5">
+                <div class="text-center">
                     <ui-avatar
                         data-upload-endpoint="uploadAvatarEndpoint"
                         data-success-callback="uploadAvatarCallback"
-                        data-src="profile.avatar_src">
+                        data-src="profile.avatarSrc"
+                        data-match-width="{{ calculateAvatarHeight() }}">
                     </ui-avatar>
                 </div>
     		</div>
 
             <!-- Profile details -->
-            <div class="col-sm-12 col-md-6">
+            <div class="col-sm-12 col-md-7">
                 <ui-editable-fields
+                    data-id="profileDetails"
                     data-model="global.state.profile.list[global.store.profileId]"
                     data-save="saveProfileDetails"
                     data-save-callback="saveProfileDetailsCallback"
@@ -169,7 +168,7 @@
 
         <!-- General notes -->
         <div class="row">
-    		<div class="col-sm-12 col-md-4">
+    		<div class="col-sm-12">
                 <ui-editable-standalone-field
                     data-heading="Medical Information"
                     data-model="global.state.profile.list[global.store.profileId]"
@@ -180,7 +179,7 @@
                 </ui-editable-standalone-field>
             </div>
 
-            <div class="col-sm-12 col-md-4">
+            <div class="col-sm-12">
                 <ui-editable-standalone-field
                     data-heading="Previous Injuries"
                     data-model="global.state.profile.list[global.store.profileId]"
@@ -191,7 +190,7 @@
                 </ui-editable-standalone-field>
             </div>
 
-            <div class="col-sm-12 col-md-4">
+            <div class="col-sm-12">
                 <ui-editable-standalone-field
                     data-heading="Other Notes"
                     data-model="global.state.profile.list[global.store.profileId]"
@@ -218,24 +217,6 @@
                 <div data-ng-include="'profile/partials/final-fms-plot.html'"></div>
             </div>
         </div>
-    </section>
-
-    <section data-ng-show="global.isLocal">
-            <div class="row">
-                <div class="col-sm-12">
-                    <div class="panel panel-default">
-                        <div class="panel-heading">
-                            Debug
-                        </div>
-
-                        <div class="panel-body">
-                            FMS Forms: {{ fmsForms }} <br><br>
-                            Profile alias: {{ profile.firstName }} ({{ profile.id }}) <br>
-                            Profile global: ({{ global.state.profile.list[global.store.profileId].id }}) <br>
-                        </div>
-                    </div>
-                </div>
-            </div>
     </section>
 </div>
 
