--- a/resources/angular-views/profile/view.html
+++ b/resources/angular-views/profile/view.html
@@ -143,7 +143,7 @@
                     <!-- Profile creation date -->
                     <ui-editable-field
                         data-label="Profile Created"
-                        data-key="created_at"
+                        data-key="createdAt"
                         data-type="datetime"
                         data-disabled="true">
                     </ui-editable-field>
@@ -151,14 +151,14 @@
                     <!-- Primary Tag -->
                     <ui-editable-field
                         data-label="Primary Sport"
-                        data-key="primary_tag"
+                        data-key="primaryTag"
                         data-type="tag">
                     </ui-editable-field>
 
                     <!-- Secondary tags -->
                     <ui-editable-field
                         data-label="Other Sports"
-                        data-key="secondary_tags"
+                        data-key="secondaryTags"
                         data-type="tag"
                         data-max-tags="10">
                     </ui-editable-field>
@@ -172,7 +172,7 @@
                 <ui-editable-standalone-field
                     data-heading="Medical Information"
                     data-model="global.state.profile.list[global.store.profileId]"
-                    data-key="medical_history"
+                    data-key="medicalHistory"
                     data-empty="No medical information provided."
                     data-save="saveProfileDetails"
                     data-save-callback="saveProfileDetailsCallback">
