Updates to profile controller on API and in Angular

--- a/resources/angular-views/account.html
+++ b/resources/angular-views/account.html
@@ -5,7 +5,7 @@
 <div class="page">
     <header>
         <h1>
-            Account <i class="fa fa-cogs"></i>
+            Account <i class="fa fa-user"></i>
             <span></span>
         </h1>
     </header>
