--- a/resources/angular-views/capture-demo/index.html
+++ b/resources/angular-views/capture-demo/index.html
@@ -98,7 +98,7 @@
             <button
                 ng-hide="isPlaying"
                 ng-click="start()"
-                class="btn btn-primary btn-circle btn-lg">
+                class="btn btn-danger btn-circle btn-lg">
 
                 <i class="fa fa-circle"></i>
             </button>
