--- a/resources/angular-views/screenings/current/index.html
+++ b/resources/angular-views/screenings/current/index.html
@@ -9,7 +9,7 @@
         </h1>
 
         <!-- Append profile name to page title -->
-        <div ng-show="screening.id > 0 && global.data.isFetchingScreeningData === false" class="h1-append">
+        <div ng-show="global.getSelectedProfile().id > 0 && global.data.isFetchingScreeningData === false" class="h1-append">
             for {{ global.getSelectedProfile().firstName }} {{ global.getSelectedProfile().lastName }}
 
             <small>
@@ -32,30 +32,62 @@
             </small>
         </h2>
 
+        <!-- Headings -->
+        <div class="row">
+            <div class="col-md-1 col-md-offset-7">
+                <span class="text-muted">
+                    Score
+                </span>
+            </div>
+        </div>
 
         <div ng-repeat="movement in screening.movements" class="row" style="margin-bottom: 15px;">
 
-            <div class="col-md-3 col-md-offset-4" style="line-height: 30px">
+            <div class="col-md-4 col-md-offset-3" style="line-height: 30px">
                 <span class="text-muted">{{ $index + 1 }}</span>
                 {{ movement.title }}
             </div>
 
-            <div class="col-md-2">
-                <button
-                    ng-click="global.alert('In Development')"
-                    class="btn btn-primary btn-circle">
-                    <i class="fa fa-plus"></i>
-                </button>
-                <button
-                    ng-click="global.alert('In Development')"
-                    class="btn btn-primary btn-circle">
-                    <i class="fa fa-cloud-upload"></i>
-                </button>
-                <button
-                    ng-click="global.alert('In Development')"
-                    class="btn btn-primary btn-circle">
-                    <i class="fa fa-th"></i>
-                </button>
+            <div class="col-md-1">
+                {{ movement.score | number:0 }} / {{ movement.scoreMax }}
+            </div>
+
+            <!-- Movement actions -->
+            <div class="col-md-1">
+                <div class="btn-group">
+                    <button
+                        class="btn btn-primary btn-circle dropdown-toggle"
+                        data-toggle="dropdown"
+                        aria-haspopup="true"
+                        aria-expanded="false">
+
+                        <i class="fa fa-plus"></i>
+                    </button>
+
+                    <ul class="dropdown-menu">
+                        <li>
+                            <a ng-click="global.alert('In Development')" href="javascript:;">
+                                <i class="fa fa-fw fa-circle"></i> Capture movement live
+                            </a>
+                        </li>
+                        <li>
+                            <a ng-click="global.alert('In Development')" href="javascript:;">
+                                <i class="fa fa-fw fa-cloud-upload"></i> Upload movement file
+                            </a>
+                        </li>
+                        <li>
+                            <a ng-click="global.alert('In Development')" href="javascript:;">
+                                <i class="fa fa-fw fa-th"></i> Select existing movement
+                            </a>
+                        </li>
+                        <li role="separator" class="divider"></li>
+                        <li>
+                            <a ng-click="global.alert('In Development')" href="javascript:;">
+                                <i class="fa fa-fw fa-trash"></i> Remove
+                            </a>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </div>
     </div>
@@ -74,13 +106,13 @@
                 </p>
             </div>
 
-            <div class="col-md-4 col-md-offset-4 text-center">
+            <div class="col-md-4 col-md-offset-4">
                 <a ng-click="createFunctionalMovementScreening()" href="javascript:;">
-                    Functional Movement Test
+                    <i class="fa fa-plus fa-fw"></i> Functional Movement Test
                 </a>
                 <br>
 
-                <a href="javascript:;">
+                <a ng-click="global.alert('In Development.')" href="javascript:;">
                     <i class="fa fa-plus fa-fw"></i> Create a Custom Movement Test
                 </a>
             </div>
