--- a/resources/angular-views/demo/trends/index.html
+++ b/resources/angular-views/demo/trends/index.html
@@ -13,10 +13,35 @@
         <div class="col-sm-12">
             <div
                 data-flot-chart
-                data-data="testLine1.data"
-                data-options="testLine1.options"
+                data-data="trend.data"
+                data-options="trend.options"
                 style="width: 100%; height: 300px;">
             </div>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-sm-12">
+            <div
+                data-flot-chart-realtime
+                data-type="realtime"
+                style="width: 100%; height: 300px;">
+            </div>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-sm-12 col-md-6">
+            <canvas
+                data-gauge-chart
+                data-gauge-data="gauge.data"
+                data-gauge-options="gauge.options"
+                style="width: 340px; height: 170px;">
+            </canvas>
+        </div>
+
+        <div class="col-sm-12 col-md-6">
+
         </div>
     </div>
 </div>
