--- a/resources/angular-views/profile/view.html
+++ b/resources/angular-views/profile/view.html
@@ -2,7 +2,7 @@
 <!-- Copyright Heddoko(TM) 2015, all rights reserved. -->
 
 <!-- Profile summary -->
-<div ng-hide="profile.id === 0" class="page">
+<div ng-hide="profile.id === 0" class="page profile-page">
     <header>
         <h1>
             {{ profile.firstName }} {{ profile.lastName }}  <i class="fa fa-user"></i>
