--- a/resources/angular-views/group/view.html
+++ b/resources/angular-views/group/view.html
@@ -6,79 +6,78 @@
             {{ group.name }} <i class="fa fa-users"></i>
             <span></span>
         </h1>
-
-        <div class="sub-header">
-
-            <!-- Create profile button -->
-            <a href="#/profile/create" class="sub-header-btn">
-                <button class="btn btn-primary btn-circle btn-lg">
-                    <i class="fa fa-user-plus"></i>
-                </button>
-            </a>
-
-            <!-- Delete group button -->
-            <a
-                ng-show="group.id > 0"
-                data-toggle="modal"
-                data-target="#deleteGroupConfirmation"
-                href="javascript:;"
-                class="sub-header-btn">
-
-                <button class="btn btn-danger btn-circle btn-lg">
-                    <i class="fa fa-trash"></i>
-                </button>
-            </a>
-
-            <!-- Delete confirmation -->
-            <div class="modal fade" id="deleteGroupConfirmation">
-                <div class="modal-dialog">
-                    <div class="modal-content">
-                        <div class="modal-body">
-                            <p ng-show="global.state.profile.filtered.length > 0">
-                                Are you sure you want to delete <b>{{ group.name }}</b>
-                                and the {{ global.state.profile.filtered.length }}
-                                associated athletes?
-                            </p>
-                            <p ng-show="global.state.profile.filtered.length === 0">
-                                Are you sure you want to delete <b>{{ group.name }}</b>?
-                            </p>
-                        </div>
-                        <div class="modal-footer text-center">
-                            <button type="button" class="btn btn-default" data-dismiss="modal">
-                                Cancel
-                            </button>
-                            <button ng-click="deleteGroup()" type="button" class="btn btn-primary" data-dismiss="modal">
-                                Yes, delete {{ group.name }}
-                            </button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
     </header>
 
     <section>
     	<div class="row">
 
             <!-- Avatar -->
-    		<div class="col-xs-12 col-md-6 col-lg-4">
-                <div class="text-center profile-avatar">
+    		<div class="col-xs-12 col-md-5 col-lg-3">
+                <div class="text-center">
                     <ui-avatar
                         data-upload-endpoint="uploadAvatarEndpoint"
                         data-success-callback="uploadAvatarCallback"
                         data-src="group.avatarSrc">
                     </ui-avatar>
                 </div>
+
+                <div class="text-center profile-shortcuts">
+
+                    <!-- Create profile button -->
+                    <a href="#/profile/create">
+                        <button class="btn btn-primary btn-circle btn-lg">
+                            <i class="fa fa-user-plus"></i>
+                        </button>
+                    </a>
+
+                    <!-- Delete group button -->
+                    <a
+                        ng-show="group.id > 0"
+                        data-toggle="modal"
+                        data-target="#deleteGroupConfirmation"
+                        href="javascript:;">
+
+                        <button class="btn btn-danger btn-circle btn-lg">
+                            <i class="fa fa-trash"></i>
+                        </button>
+                    </a>
+
+                    <!-- Delete confirmation -->
+                    <div class="modal fade" id="deleteGroupConfirmation">
+                        <div class="modal-dialog">
+                            <div class="modal-content">
+                                <div class="modal-body">
+                                    <p ng-show="global.state.profile.filtered.length > 0">
+                                        Are you sure you want to delete <b>{{ group.name }}</b>
+                                        and the {{ global.state.profile.filtered.length }}
+                                        associated athletes?
+                                    </p>
+                                    <p ng-show="global.state.profile.filtered.length === 0">
+                                        Are you sure you want to delete <b>{{ group.name }}</b>?
+                                    </p>
+                                </div>
+                                <div class="modal-footer text-center">
+                                    <button type="button" class="btn btn-default" data-dismiss="modal">
+                                        Cancel
+                                    </button>
+                                    <button ng-click="deleteGroup()" type="button" class="btn btn-primary" data-dismiss="modal">
+                                        Yes, delete {{ group.name }}
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
     		</div>
 
             <!-- Group details -->
-            <div class="col-xs-12 col-md-6 col-lg-8">
+            <div class="col-xs-12 col-md-7 col-lg-4">
                 <ui-editable-fields
                     data-id="groupDetails"
                     data-model="group"
                     data-save="saveGroupDetails"
                     data-save-callback="saveGroupDetailsCallback"
-                    data-heading="Details for {{ group.name }}">
+                    data-heading="Team Details">
 
                     <!-- Group name -->
                     <ui-editable-field
@@ -125,6 +124,23 @@
                     </ui-editable-field>
                 </ui-editable-fields>
             </div>
+
+            <!-- Notes -->
+            <div class="col-xs-12 col-lg-5">
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        Notes
+                    </div>
+
+                    <div class="panel-body">
+                        <div class="row">
+                            <div class="col-sm-12">
+                                ...
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
 
@@ -148,25 +164,6 @@
         </div>
 
         <br>
-    </div>
-
-    <!-- Notes -->
-    <div class="row">
-        <div class="col-sm-12">
-            <div class="panel panel-default">
-                <div class="panel-heading">
-                    Notes
-                </div>
-
-                <div class="panel-body">
-                    <div class="row">
-                        <div class="col-sm-12">
-                            ...
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
     </div>
 </div>
 
