--- a/resources/angular-views/profile/view.html
+++ b/resources/angular-views/profile/view.html
@@ -8,76 +8,77 @@
             {{ profile.firstName }} {{ profile.lastName }}  <i class="fa fa-user"></i>
             <span></span>
         </h1>
-
-        <div class="sub-header">
-
-            <!-- View trends -->
-            <a href="#/demo/trends" class="sub-header-btn">
-                <button class="btn btn-primary btn-circle btn-lg">
-                    <i class="fa fa-line-chart"></i>
-                </button>
-            </a>
-
-            <!-- Delete group button -->
-            <a
-                ng-show="profile.id > 0"
-                data-toggle="modal"
-                data-target="#deleteProfileConfirmation"
-                href="javascript:;"
-                class="sub-header-btn">
-
-                <button class="btn btn-danger btn-circle btn-lg">
-                    <i class="fa fa-trash"></i>
-                </button>
-            </a>
-
-            <!-- Delete confirmation -->
-            <div class="modal fade" id="deleteProfileConfirmation">
-                <div class="modal-dialog">
-                    <div class="modal-content">
-                        <div class="modal-body">
-                            <p>
-                                Are you sure you want to delete <b>{{ profile.firstName }}
-                                {{ profile.lastName }}</b>'s profile?
-                            </p>
-                        </div>
-                        <div class="modal-footer text-center">
-                            <button type="button" class="btn btn-default" data-dismiss="modal">
-                                Cancel
-                            </button>
-                            <button ng-click="deleteProfile()" type="button" class="btn btn-primary" data-dismiss="modal">
-                                Yes, delete {{ profile.firstName }}
-                            </button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
     </header>
 
     <section ng-show="profile.id > 0">
     	<div class="row">
 
-            <!-- Avatar -->
-    		<div class="col-sm-12 col-md-5">
+    		<div class="col-xs-12 col-md-5 col-lg-3">
+
+                <!-- Avatar -->
                 <div class="text-center">
                     <ui-avatar
                         data-upload-endpoint="uploadAvatarEndpoint"
                         data-success-callback="uploadAvatarCallback"
-                        data-src="profile.avatarSrc"
-                        data-match-width="{{ calculateAvatarHeight() }}">
+                        data-src="profile.avatarSrc">
                     </ui-avatar>
+                </div>
+
+                <!-- Profile shortcuts -->
+                <div class="text-center profile-shortcuts">
+
+                    <!-- View trends -->
+                    <a href="#/demo/trends" class="sub-header-btn">
+                        <button class="btn btn-primary btn-circle btn-lg">
+                            <i class="fa fa-line-chart"></i>
+                        </button>
+                    </a>
+
+                    <!-- Delete group button -->
+                    <a
+                        ng-show="profile.id > 0"
+                        data-toggle="modal"
+                        data-target="#deleteProfileConfirmation"
+                        href="javascript:;"
+                        class="sub-header-btn">
+
+                        <button class="btn btn-danger btn-circle btn-lg">
+                            <i class="fa fa-trash"></i>
+                        </button>
+                    </a>
+
+                    <!-- Delete confirmation -->
+                    <div class="modal fade" id="deleteProfileConfirmation">
+                        <div class="modal-dialog">
+                            <div class="modal-content">
+                                <div class="modal-body">
+                                    <p>
+                                        Are you sure you want to delete <b>{{ profile.firstName }}
+                                        {{ profile.lastName }}</b>'s profile?
+                                    </p>
+                                </div>
+                                <div class="modal-footer text-center">
+                                    <button type="button" class="btn btn-default" data-dismiss="modal">
+                                        Cancel
+                                    </button>
+                                    <button ng-click="deleteProfile()" type="button" class="btn btn-primary" data-dismiss="modal">
+                                        Yes, delete {{ profile.firstName }}
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
     		</div>
 
             <!-- Profile details -->
-            <div class="col-sm-12 col-md-7">
+            <div class="col-xs-12 col-md-7 col-lg-4">
                 <ui-editable-fields
                     data-id="profileDetails"
                     data-model="profile"
                     data-save="saveProfileDetails"
                     data-save-callback="saveProfileDetailsCallback"
-                    data-heading="{{ profile.firstName }}'s details">
+                    data-heading="Details">
 
                     <!-- First name -->
                     <ui-editable-field
@@ -156,43 +157,43 @@
                     </ui-editable-field>
                 </ui-editable-fields>
             </div>
+
+            <!-- General notes -->
+            <div class="col-xs-12 col-lg-5">
+        		<div class="col-xs-12">
+                    <ui-editable-standalone-field
+                        data-heading="Medical Information"
+                        data-model="profile"
+                        data-key="medicalHistory"
+                        data-empty="No medical information provided."
+                        data-save="saveProfileDetails"
+                        data-save-callback="saveProfileDetailsCallback">
+                    </ui-editable-standalone-field>
+                </div>
+
+                <div class="col-xs-12">
+                    <ui-editable-standalone-field
+                        data-heading="Previous Injuries"
+                        data-model="profile"
+                        data-key="injuries"
+                        data-empty="No previous injuries."
+                        data-save="saveProfileDetails"
+                        data-save-callback="saveProfileDetailsCallback">
+                    </ui-editable-standalone-field>
+                </div>
+
+                <div class="col-xs-12">
+                    <ui-editable-standalone-field
+                        data-heading="Other Notes"
+                        data-model="profile"
+                        data-key="notes"
+                        data-empty="No other notes."
+                        data-save="saveProfileDetails"
+                        data-save-callback="saveProfileDetailsCallback">
+                    </ui-editable-standalone-field>
+        		</div>
+        	</div>
         </div>
-
-        <!-- General notes -->
-        <div class="row">
-    		<div class="col-sm-12">
-                <ui-editable-standalone-field
-                    data-heading="Medical Information"
-                    data-model="profile"
-                    data-key="medicalHistory"
-                    data-empty="No medical information provided."
-                    data-save="saveProfileDetails"
-                    data-save-callback="saveProfileDetailsCallback">
-                </ui-editable-standalone-field>
-            </div>
-
-            <div class="col-sm-12">
-                <ui-editable-standalone-field
-                    data-heading="Previous Injuries"
-                    data-model="profile"
-                    data-key="injuries"
-                    data-empty="No previous injuries."
-                    data-save="saveProfileDetails"
-                    data-save-callback="saveProfileDetailsCallback">
-                </ui-editable-standalone-field>
-            </div>
-
-            <div class="col-sm-12">
-                <ui-editable-standalone-field
-                    data-heading="Other Notes"
-                    data-model="profile"
-                    data-key="notes"
-                    data-empty="No other notes."
-                    data-save="saveProfileDetails"
-                    data-save-callback="saveProfileDetailsCallback">
-                </ui-editable-standalone-field>
-    		</div>
-    	</div>
     </section>
 </div>
 
